--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Drones</title>
@@ -7,11 +8,15 @@
     <script src="node_modules/traceur/bin/traceur.js"></script>
     <script src="node_modules/systemjs/dist/system.js"></script>
     <script src="node_modules/material-design-lite/dist/material.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBwj2saRGujwh4IIO3mMhEiQq1J1Vcyoc&callback=initMap"
+    async defer></script>
   </head>
   <body>
     <script>
-      System.paths['jquery'] = './node_modules/jquery/dist/jquery.js';
-      System.import('src/app.js')
+      function initMap() {
+        System.paths['jquery'] = './node_modules/jquery/dist/jquery.js';
+        System.import('src/app.js');
+      }
     </script>
   </body>
 </html>
